fix(sidebar): fix scrollbar and dropdown issues!

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@ body {
 
 /* Modify code Font */
 code {
-    font-family: 'JetBrains Mono', monospace !important;
+  font-family: 'JetBrains Mono', monospace !important;
 }
 
 /* Styling scrollbar ChatGPT/Gemini */
@@ -47,8 +47,41 @@ code {
   background: rgba(236, 236, 236, 0.5);
 }
 
+.sidebar-custom::-webkit-scrollbar {
+  width: 8px;
+}
+
+.sidebar-custom::-webkit-scrollbar-button:single-button {
+  background-image: url('/inverted-triangle-svgrepo-com.svg');
+  background-repeat: no-repeat;
+  background-color: rgba(255, 255, 255, 0.7);
+  background-blend-mode: lighten;
+  background-position: center;
+  background-size: 100%;
+  height: 8px;
+  width: 8px;
+  border: none;
+}
+
+.sidebar-custom::-webkit-scrollbar-button:single-button:decrement {
+  background-image: url('/inverted-triangle-svgrepo-com-upward.svg');
+}
+.sidebar-custom::-webkit-scrollbar-button:single-button:hover {
+  background-color: rgba(255, 255, 255, 0.55);
+}
+
+.sidebar-custom::-webkit-scrollbar-thumb {
+  cursor: default;
+  background: rgba(131, 131, 131, 0.5);
+  border-radius: 10px;
+}
+
+.sidebar-custom::-webkit-scrollbar-thumb:hover {
+  background: rgba(131, 131, 131, 0.7);
+}
+
 .transition-height {
   -webkit-transition: height 0.2s ease;
-	-moz-transition: height 0.2s ease;
-	transition: height 0.2s ease;
+  -moz-transition: height 0.2s ease;
+  transition: height 0.2s ease;
 }
